--- a/index.html
+++ b/index.html
@@ -3,134 +3,49 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Video Stream UI</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #121212;
-      color: #fff;
-    }
-
-    header {
-      background-color: #000;
-      padding: 15px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    header h1 {
-      color: #ff9900;
-      font-size: 28px;
-      margin: 0;
-    }
-
-    .search-box input {
-      padding: 8px;
-      width: 250px;
-      border-radius: 5px;
-      border: none;
-    }
-
-    nav {
-      background-color: #1e1e1e;
-      padding: 10px 30px;
-    }
-
-    nav a {
-      color: #ccc;
-      margin-right: 20px;
-      text-decoration: none;
-      font-size: 16px;
-    }
-
-    nav a:hover {
-      color: #ff9900;
-    }
-
-    .content {
-      padding: 20px 30px;
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-      gap: 20px;
-    }
-
-    .video-card {
-      background-color: #1e1e1e;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
-      transition: transform 0.2s ease;
-    }
-
-    .video-card:hover {
-      transform: scale(1.03);
-    }
-
-    .video-thumb img {
-      width: 100%;
-      height: 160px;
-      object-fit: cover;
-    }
-
-    .video-info {
-      padding: 10px;
-    }
-
-    .video-title {
-      font-size: 16px;
-      font-weight: 600;
-      color: #fff;
-      margin: 0 0 5px 0;
-    }
-
-    .video-meta {
-      font-size: 14px;
-      color: #999;
-    }
-  </style>
+  <title>xH Stream UI</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
+  <div class="wrapper">
+    <aside class="sidebar">
+      <h2 class="logo">xH Stream</h2>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Categories</a>
+        <a href="#">Trending</a>
+        <a href="#">Subscriptions</a>
+        <a href="#">Library</a>
+      </nav>
+    </aside>
 
-  <header>
-    <h1>StreamZone</h1>
-    <div class="search-box">
-      <input type="text" placeholder="Search videos...">
-    </div>
-  </header>
+    <main class="main-content">
+      <header class="topbar">
+        <input type="text" placeholder="Search videos..." />
+      </header>
 
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Categories</a>
-    <a href="#">Trending</a>
-    <a href="#">Favorites</a>
-  </nav>
+      <section class="video-grid">
+        <!-- Video Card 1 -->
+        <div class="video-card">
+          <img src="https://placehold.co/300x160" alt="Video Thumbnail" />
+          <div class="info">
+            <h4>Big Brain Coding</h4>
+            <p>1.2M views • 3 days ago</p>
+          </div>
+        </div>
 
-  <main class="content">
-    <div class="video-card">
-      <div class="video-thumb">
-        <img src="https://placehold.co/300x160" alt="Video Thumbnail">
-      </div>
-      <div class="video-info">
-        <p class="video-title">Sample Video Title</p>
-        <p class="video-meta">1M views • 2 days ago</p>
-      </div>
-    </div>
+        <!-- Video Card 2 -->
+        <div class="video-card">
+          <img src="https://placehold.co/300x160" alt="Video Thumbnail" />
+          <div class="info">
+            <h4>Intro to GitHub Projects</h4>
+            <p>842K views • 1 week ago</p>
+          </div>
+        </div>
 
-    <!-- Repeat the same card for more videos -->
-    <div class="video-card">
-      <div class="video-thumb">
-        <img src="https://placehold.co/300x160" alt="Video Thumbnail">
-      </div>
-      <div class="video-info">
-        <p class="video-title">Cool Coding Tutorial</p>
-        <p class="video-meta">523K views • 1 week ago</p>
-      </div>
-    </div>
-
-    <!-- You can copy-paste more of these cards -->
-  </main>
-
+        <!-- More cards... -->
+      </section>
+    </main>
+  </div>
 </body>
 </html>
