--- a/index.html
+++ b/index.html
@@ -4,12 +4,117 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>xH Stream UI</title>
-  <link rel="stylesheet" href="styles.css" />
+  <style>
+    body, h1, h2, h3, p, a {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+    }
+
+    body {
+      background-color: #0e0e0e;
+      color: #fff;
+      display: flex;
+    }
+
+    .wrapper {
+      display: flex;
+      width: 100%;
+      height: 100vh;
+    }
+
+    .sidebar {
+      width: 220px;
+      background-color: #1a1a1a;
+      padding: 20px;
+      box-shadow: 2px 0 5px rgba(0,0,0,0.3);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    .sidebar img.logo {
+      width: 100px;
+      margin-bottom: 20px;
+    }
+
+    .sidebar nav a {
+      display: block;
+      color: #ccc;
+      padding: 10px 0;
+      text-decoration: none;
+      text-align: center;
+      transition: 0.3s;
+    }
+
+    .sidebar nav a:hover {
+      color: #ff4747;
+    }
+
+    .topbar {
+      background-color: #1f1f1f;
+      padding: 15px;
+      display: flex;
+      justify-content: flex-end;
+    }
+
+    .topbar input {
+      padding: 8px;
+      width: 250px;
+      border: none;
+      border-radius: 5px;
+    }
+
+    .main-content {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .video-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      padding: 20px;
+      gap: 20px;
+    }
+
+    .video-card {
+      background-color: #222;
+      border-radius: 10px;
+      overflow: hidden;
+      transition: 0.2s;
+    }
+
+    .video-card:hover {
+      transform: scale(1.03);
+    }
+
+    .video-card img {
+      width: 100%;
+      height: 160px;
+      object-fit: cover;
+    }
+
+    .video-card .info {
+      padding: 10px;
+    }
+
+    .video-card h4 {
+      margin-bottom: 6px;
+      font-size: 16px;
+    }
+
+    .video-card p {
+      font-size: 14px;
+      color: #999;
+    }
+  </style>
 </head>
 <body>
   <div class="wrapper">
+    <!-- Sidebar -->
     <aside class="sidebar">
-      <h2 class="logo">xH Stream</h2>
+      <img src="OIP.jpeg" alt="xH Logo" class="logo" />
       <nav>
         <a href="#">Home</a>
         <a href="#">Categories</a>
@@ -19,13 +124,15 @@
       </nav>
     </aside>
 
+    <!-- Main Content -->
     <main class="main-content">
+      <!-- Topbar -->
       <header class="topbar">
         <input type="text" placeholder="Search videos..." />
       </header>
 
+      <!-- Video Grid -->
       <section class="video-grid">
-        <!-- Video Card 1 -->
         <div class="video-card">
           <img src="https://placehold.co/300x160" alt="Video Thumbnail" />
           <div class="info">
@@ -34,16 +141,13 @@
           </div>
         </div>
 
-        <!-- Video Card 2 -->
         <div class="video-card">
           <img src="https://placehold.co/300x160" alt="Video Thumbnail" />
           <div class="info">
-            <h4>Intro to GitHub Projects</h4>
+            <h4>GitHub Projects Guide</h4>
             <p>842K views • 1 week ago</p>
           </div>
         </div>
-
-        <!-- More cards... -->
       </section>
     </main>
   </div>
