--- a/index.html
+++ b/index.html
@@ -55,14 +55,19 @@
       background-color: #1f1f1f;
       padding: 15px;
       display: flex;
-      justify-content: flex-end;
+      justify-content: space-between;
+      align-items: center;
     }
 
-    .topbar input {
+    .topbar input[type="text"] {
       padding: 8px;
       width: 250px;
       border: none;
       border-radius: 5px;
+    }
+
+    .topbar input[type="file"] {
+      color: #fff;
     }
 
     .main-content {
@@ -76,6 +81,7 @@
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
       padding: 20px;
       gap: 20px;
+      overflow-y: scroll;
     }
 
     .video-card {
@@ -89,7 +95,7 @@
       transform: scale(1.03);
     }
 
-    .video-card img {
+    .video-card img, .video-card video {
       width: 100%;
       height: 160px;
       object-fit: cover;
@@ -126,13 +132,15 @@
 
     <!-- Main Content -->
     <main class="main-content">
-      <!-- Topbar -->
+      <!-- Topbar with Search and Upload -->
       <header class="topbar">
         <input type="text" placeholder="Search videos..." />
+        <input type="file" id="upload" accept="image/*,video/*" />
       </header>
 
       <!-- Video Grid -->
-      <section class="video-grid">
+      <section class="video-grid" id="videoGrid">
+        <!-- Preloaded card -->
         <div class="video-card">
           <img src="https://placehold.co/300x160" alt="Video Thumbnail" />
           <div class="info">
@@ -140,16 +148,51 @@
             <p>1.2M views • 3 days ago</p>
           </div>
         </div>
-
-        <div class="video-card">
-          <img src="https://placehold.co/300x160" alt="Video Thumbnail" />
-          <div class="info">
-            <h4>GitHub Projects Guide</h4>
-            <p>842K views • 1 week ago</p>
-          </div>
-        </div>
       </section>
     </main>
   </div>
+
+  <script>
+    const uploadInput = document.getElementById("upload");
+    const videoGrid = document.getElementById("videoGrid");
+
+    uploadInput.addEventListener("change", function () {
+      const file = this.files[0];
+      const card = document.createElement("div");
+      card.classList.add("video-card");
+
+      const fileType = file.type;
+      const reader = new FileReader();
+
+      reader.onload = function (e) {
+        if (fileType.startsWith("image")) {
+          card.innerHTML = `
+            <img src="${e.target.result}" alt="User Content">
+            <div class="info">
+              <h4>${file.name}</h4>
+              <p>Just Now • Uploaded</p>
+            </div>
+          `;
+        } else if (fileType.startsWith("video")) {
+          card.innerHTML = `
+            <video controls>
+              <source src="${e.target.result}" type="${fileType}">
+              Your browser does not support the video tag.
+            </video>
+            <div class="info">
+              <h4>${file.name}</h4>
+              <p>Just Now • Uploaded</p>
+            </div>
+          `;
+        } else {
+          alert("Unsupported file type!");
+          return;
+        }
+        videoGrid.prepend(card);
+      };
+
+      reader.readAsDataURL(file);
+    });
+  </script>
 </body>
 </html>
